--- a/RTRS/RTRS/Base.lproj/Main.storyboard
+++ b/RTRS/RTRS/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O8S-Jp-9LQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="O8S-Jp-9LQ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,19 +18,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fkB-j7-QJk">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="THE POD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pi-5w-OLT">
-                                        <rect key="frame" x="50" y="274" width="208" height="45"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pi-5w-OLT">
+                                        <rect key="frame" x="50" y="228.5" width="108.5" height="90"/>
+                                        <string key="text">THE 
+POD</string>
                                         <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="45"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eP0-Hu-8ez">
-                                        <rect key="frame" x="200" y="570" width="214" height="243"/>
+                                        <rect key="frame" x="207" y="435.5" width="207" height="333.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AU'S CORNER" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R9H-bG-Ke8">
-                                                <rect key="frame" x="0.0" y="82.5" width="214" height="78"/>
+                                                <rect key="frame" x="0.0" y="128" width="207" height="78"/>
                                                 <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="39"/>
                                                 <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -41,11 +43,10 @@
                                             <constraint firstAttribute="trailing" secondItem="R9H-bG-Ke8" secondAttribute="trailing" id="6bB-8b-mSN"/>
                                             <constraint firstItem="R9H-bG-Ke8" firstAttribute="centerY" secondItem="eP0-Hu-8ez" secondAttribute="centerY" id="Sdz-Aq-xD1"/>
                                             <constraint firstItem="R9H-bG-Ke8" firstAttribute="leading" secondItem="eP0-Hu-8ez" secondAttribute="leading" id="jaq-Kw-ejB"/>
-                                            <constraint firstAttribute="height" constant="243" id="wYj-tP-F0h"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3wc-G4-0ch">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="112"/>
+                                        <rect key="frame" x="0.0" y="-44" width="414" height="112"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick which content you want to view:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Guw-JZ-ohW">
                                                 <rect key="frame" x="66" y="69" width="282" height="21"/>
@@ -62,20 +63,23 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tJh-ii-9ae">
-                                        <rect key="frame" x="0.0" y="327" width="414" height="242"/>
+                                        <rect key="frame" x="0.0" y="334.5" width="414" height="100"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="mMo-Ox-b77"/>
+                                        </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="tJh-ii-9ae" firstAttribute="top" secondItem="4pi-5w-OLT" secondAttribute="bottom" constant="8" id="3Za-tt-o9r"/>
+                                    <constraint firstItem="tJh-ii-9ae" firstAttribute="top" secondItem="4pi-5w-OLT" secondAttribute="bottom" constant="16" id="3Za-tt-o9r"/>
                                     <constraint firstAttribute="trailing" secondItem="eP0-Hu-8ez" secondAttribute="trailing" id="7Uh-yk-Hxf"/>
                                     <constraint firstAttribute="bottom" secondItem="eP0-Hu-8ez" secondAttribute="bottom" id="CCL-dZ-wKH"/>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="4pi-5w-OLT" secondAttribute="trailing" constant="156" id="Ciy-gI-ewB"/>
+                                    <constraint firstItem="tJh-ii-9ae" firstAttribute="centerY" secondItem="fkB-j7-QJk" secondAttribute="centerY" id="GpI-9a-3ee"/>
                                     <constraint firstAttribute="trailing" secondItem="tJh-ii-9ae" secondAttribute="trailing" id="IfL-Ab-qJ9"/>
                                     <constraint firstItem="eP0-Hu-8ez" firstAttribute="top" secondItem="tJh-ii-9ae" secondAttribute="bottom" constant="1" id="gHm-wx-oIZ"/>
-                                    <constraint firstItem="eP0-Hu-8ez" firstAttribute="leading" secondItem="fkB-j7-QJk" secondAttribute="leading" constant="200" id="jys-5z-aHM"/>
-                                    <constraint firstItem="4pi-5w-OLT" firstAttribute="top" secondItem="fkB-j7-QJk" secondAttribute="top" constant="274" id="ss9-Po-ApD"/>
+                                    <constraint firstItem="eP0-Hu-8ez" firstAttribute="leading" secondItem="fkB-j7-QJk" secondAttribute="centerX" id="jys-5z-aHM"/>
                                     <constraint firstItem="4pi-5w-OLT" firstAttribute="leading" secondItem="fkB-j7-QJk" secondAttribute="leading" constant="50" id="tGK-LQ-7Bd"/>
                                 </constraints>
                             </view>
@@ -87,7 +91,7 @@
                             <constraint firstAttribute="bottomMargin" secondItem="fkB-j7-QJk" secondAttribute="bottom" id="Tnc-xp-5Dt"/>
                             <constraint firstItem="tJh-ii-9ae" firstAttribute="leading" secondItem="aaY-1l-tbY" secondAttribute="leading" id="azb-LU-P7k"/>
                             <constraint firstItem="3wc-G4-0ch" firstAttribute="leading" secondItem="wKX-bw-W5T" secondAttribute="leadingMargin" constant="-20" id="mZ3-WO-eAC"/>
-                            <constraint firstItem="fkB-j7-QJk" firstAttribute="top" secondItem="wKX-bw-W5T" secondAttribute="topMargin" constant="-44" id="rjf-sA-DWN"/>
+                            <constraint firstItem="fkB-j7-QJk" firstAttribute="top" secondItem="wKX-bw-W5T" secondAttribute="topMargin" id="rjf-sA-DWN"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fkB-j7-QJk" secondAttribute="trailing" constant="-20" id="tWG-92-9Ia"/>
                             <constraint firstItem="3wc-G4-0ch" firstAttribute="top" secondItem="wKX-bw-W5T" secondAttribute="topMargin" constant="-44" id="wpa-vi-oGn"/>
                         </constraints>
@@ -120,7 +124,7 @@
                         <color key="sectionIndexColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search by title, description, or date" id="QBW-ud-gQe">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <rect key="frame" x="0.0" y="0.0" width="508" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <textInputTraits key="textInputTraits"/>
@@ -229,7 +233,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0VL-Nu-n0L">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8wu-f2-bDP">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="217"/>
@@ -528,7 +532,6 @@
         <!--Root Tab Controller-->
         <scene sceneID="Iab-g1-HhG">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tLF-sJ-U1T" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController storyboardIdentifier="Home" id="Ty9-Ln-5Mi" customClass="RootTabController" customModule="RTRS" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="DMD-cP-fEd"/>
                     <nil key="simulatedTopBarMetrics"/>
@@ -544,6 +547,7 @@
                         <segue destination="Ggk-yU-Rbc" kind="relationship" relationship="viewControllers" id="77Q-mO-bcl"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tLF-sJ-U1T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1412" y="139"/>
         </scene>
@@ -751,7 +755,7 @@
                                     <fragment content="Testing">
                                         <attributes>
                                             <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                            <font key="NSFont" metaFont="smallSystem"/>
+                                            <font key="NSFont" metaFont="message" size="11"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                         </attributes>
                                     </fragment>
@@ -1142,6 +1146,10 @@
             <point key="canvasLocation" x="-271" y="1592"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="BWH-bX-Mxo"/>
+    </inferredMetricsTieBreakers>
+    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
     <resources>
         <image name="Dismiss-Icon" width="25" height="25"/>
         <image name="Heart-No-Fill" width="25" height="25"/>
@@ -1153,8 +1161,4 @@
         <image name="Skip-Forward" width="25" height="25"/>
         <image name="SpikeMike" width="48" height="32"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="cqK-au-f3a"/>
-    </inferredMetricsTieBreakers>
-    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
